# my-sft221-workshops

w01/: SFT221 Workshop 1 Template.xlsx  w01.xlsx
w02/: SFT221 WS2 Workshop Template.xlsx  Workshop2.main.c  w02.xlsx
w03/: Reflection.docx
w03/test01/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
w03/test01/include/: lib.h
w03/test01/src/: lib.c  main.c
w03/test01/test/: lib_test.cpp
w04/: main.c  reflect.docx  reflect.txt
w05/: SFT221_w5_Chia-Yu Chien.docx  reflection.docx
w05/code/: CMakeLists.txt  vcpkg.json
w05/code/include/: stringhelp.h
w05/code/src/: main.c  stringhelp.c
w05/code/test/: is-number_test.cpp  next-white_test.cpp
w06/: SFT221_w6_Chia-Yu Chien.docx  reflection.docx
w06/code/: CMakeLists.txt  README.md
w06/code/include/: logger.h  stringhelp.h
w06/code/src/: main.c
w06/code/src/lib/: stringhelp.c
w06/code/test/: lib_test.cpp
